--- a/my_trabajo_BigData.qmd
+++ b/my_trabajo_BigData.qmd
@@ -73,7 +73,6 @@ library(rnaturalearth)
 #Cargar los datos desde el archivo CSV
 file_path <- "Meteorite_Landings.csv"
 df <- read.csv(file_path, stringsAsFactors = FALSE)
-str(df)
 
 ```
 
@@ -111,7 +110,7 @@ Esto muestra una tabla que indica que hay 75 meteoritos de tipo "Relicto" y 4564
 
 ### Tipos de observaciones 🔭
 
-Podemos observar que tenemos dos tipos de observaciones: 
+Podemos observar que tenemos dos tipos de observaciones(*fall*): 
 
 1.**Caído** (*Fell*): indica que la caída del meteorito fue observada.
 
@@ -576,7 +575,7 @@ mundo <- map_data('world')
 head(mundo)
 ggplot() +
   geom_polygon(data=world, aes(x=long, y=lat, group=group)) +
-  geom_point(data=df, aes(x=reclong, y=reclat), col='purple', alpha=.2)
+  geom_point(data=df, aes(x=reclong, y=reclat), color ='purple', alpha=0.2)
 ```
 
 ### Distribución Meteoritos Aterrizados según Tipo y Masa 🌍
@@ -740,3 +739,13 @@ En general, estos resultados resaltan la importancia de considerar la geografía
 ![Generada con IA-1](./imagenes/IA1.png)
 
 ![Generada con IA-2](./imagenes/IA2.png)
+
+## Bibliografía 📖
+
+Inspiración para el trabajo:
+
+- [Github](https://github.com/Guangtufan/Meteorite)
+
+- [Github] (https://github.com/majvdvel/meteorites)
+
+
